feat: add support for images

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "strict": true,
-    "noEmitOnError": true
+    "noEmitOnError": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "types"
+    ]
   }
 }
