--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "file-loader": "^6.0.0",
-    "jest": "^25.1.0",
+    "jest": "24",
     "mini-css-extract-plugin": "^0.6.0",
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
@@ -26,6 +26,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack-dev-server --content-base public",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   }
 }
