--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,12 @@
     "strict": true,
     "noEmitOnError": true,
     "typeRoots": [
-      "node_modules/@types",
-      "types"
-    ]
+      "./node_modules/@types",
+      "./types"
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@local/*":["./src/*"]
+    }
   }
 }
