--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte-loader": "2.13.3",
     "svelte-preprocess": "^3.5.0",
     "ts-jest": "^25.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
