--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "file-loader": "^6.0.0",
-    "jest": "24",
+    "jest": "^25.2.4",
     "mini-css-extract-plugin": "^0.6.0",
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
