--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ node_modules
 public/bundle.*
 public/images/
 /coverage/
+
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
