--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "style-loader": "^0.23.1",
     "svelte": "^3.0.0",
     "svelte-jester": "^1.0.5",
+    "svelte-language-server": "^0.10.155",
     "svelte-loader": "2.13.3",
     "svelte-preprocess": "^3.5.0",
     "ts-jest": "^25.2.1",
